--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,40 +1,42 @@
 {% extends 'diary/base.html' %}
 {% load static %}
-{% block title %}Авторизация пользователя{% endblock %}
+{% block title %}Приветственная страница{% endblock %}
 
 {% block content %}
-<section class="my-registration-form">
+<section class="bg-light py-5">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-12">
+            <div class="col-lg-6 col-md-8 col-sm-10">
+                <h1 class="mb-4 text-center">Добро пожаловать!</h1>
                 <nav aria-label="breadcrumb" class="my-4">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="{% url 'diary:list_posts' %}">Главная</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Авторизация</li>
                     </ol>
                 </nav>
 
-                <div class="row justify-content-center">
-                    <div class="col-6">
-                        <p class="row justify-content-center">Для авторизации введите e-mail и пароль</p>
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body">
+                        <p class="text-center">Для входа введите e-mail и пароль.</p>
                         <form method="post" action="{% url 'users:login' %}">
                             {% csrf_token %}
-                            <div class="d-grid gap-2 col-6 mx-auto mb-4">
-                                <label for="username">Введите логин</label>
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Логин</label>
                                 {{ form.username }}
                             </div>
-                            <div class="d-grid gap-2 col-6 mx-auto mb-4">
-                                <label for="password">Введите пароль</label>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Пароль</label>
                                 {{ form.password }}
                             </div>
-                            <div class="d-grid gap-2 col-6 mx-auto">
+                            <div class="d-flex justify-content-between align-items-center">
                                 <button type="submit" class="btn btn-primary">Войти</button>
+                                <a href="{% url 'users:reset_password' %}" class="small">Забыли пароль?</a>
                             </div>
                         </form>
-                        <div class="d-grid gap-2 col-6 mx-auto mb-8">
-                            <p><a href="{% url 'users:reset_password' %}">Забыли пароль?</a></p>
-                        </div>
                     </div>
+                </div>
+
+                <div class="mt-4 text-center">
+                    <p>Новый пользователь? <a href="{% url 'users:registration' %}">Зарегистрируйтесь сейчас!</a></p>
                 </div>
             </div>
         </div>
