--- a/diary/templates/block/navbar.html
+++ b/diary/templates/block/navbar.html
@@ -9,8 +9,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 {% if user.is_authenticated %}
                 <div class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <a class="nav-link" href="{% url 'diary:list_posts' %}">Главная</a>
-                    <a class="nav-link" href="{% url 'diary:create_post' %}">Сделать новую запись</a>
+                    <a href="{% url 'diary:list_posts' %}" class="btn btn-outline-light me-2">Главная</a>
+                    <a href="{% url 'diary:create_post' %}" class="btn btn-outline-light me-2">Сделать новую запись</a>
                 </div>
 
                 <form action="{% url 'diary:search' %}" method="get" class="d-flex" role="search">
