--- a/users/templates/users/user_form.html
+++ b/users/templates/users/user_form.html
@@ -56,6 +56,14 @@
                         </div>
 
                         <div class="form-group row">
+                            <label for="username" class="col-sm-3 col-form-label">Ф.И.О</label>
+                            <div class="col-sm-9">
+                                <input type="text" id="fullname" name="fullname" value="{{ user.fullname }}"
+                                       class="form-control" required>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
                             <label for="city" class="col-sm-3 col-form-label">Город</label>
                             <div class="col-sm-9">
                                 <input type="city" id="city" name="city" value="{{ user.city }}"
