--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -20,18 +20,22 @@
                             {% csrf_token %}
                             <div class="d-grid gap-2 col-6 mx-auto mb-2">
                                 {{ form.email }}
-                                <p>Введите e-mail</p>
                             </div>
+
                             <div class="d-grid gap-2 col-6 mx-auto mb-2">
                                 {{ form.password1 }}
-                                <p>Введите пароль</p>
                             </div>
+
                             <div class="d-grid gap-2 col-6 mx-auto mb-2">
                                 {{ form.password2 }}
-                                <p>Введите пароль еще раз</p>
                             </div>
+
                             <div class="d-grid gap-2 col-6 mx-auto">
                                 <button type="submit" class="btn btn-primary">Регистрация</button>
+                            </div>
+
+                            <div class="d-grid gap-2 col-6 mx-auto mb-4">
+                                <a href="{% url 'users:login' %}" class="small">Вернуться к авторизации</a>
                             </div>
                         </form>
                     </div>
