--- a/users/templates/users/reset_password.html
+++ b/users/templates/users/reset_password.html
@@ -18,7 +18,10 @@
                         <p class="row justify-content-center">Для восстановления пароля укажите e-mail</p>
                         <form method="post" action="{% url 'users:reset_password' %}">
                             {% csrf_token %}
-                            {{ form.as_p }}
+                            <div class="d-grid gap-2 col-6 mx-auto mb-2">
+                                {{ form.email }}
+                            </div>
+
                             <div class="d-grid gap-2 col-6 mx-auto mb-4">
                                 <button type="submit" class="btn btn-primary">Сбросить по e-mail</button>
                             </div>
