--- a/users/templates/users/reset_password.html
+++ b/users/templates/users/reset_password.html
@@ -25,6 +25,10 @@
                             <div class="d-grid gap-2 col-6 mx-auto mb-4">
                                 <button type="submit" class="btn btn-primary">Сбросить по e-mail</button>
                             </div>
+
+                            <div class="d-grid gap-2 col-6 mx-auto mb-4">
+                                <a href="{% url 'users:login' %}" class="small">Вернуться к авторизации</a>
+                            </div>
                         </form>
                     </div>
                 </div>
