--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -3,11 +3,16 @@
 {% block title %}Приветственная страница{% endblock %}
 
 {% block content %}
-<section class="bg-light py-5" >
+<section class="bg-light py-5">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-8 col-sm-10">
-                <h1 class="mb-4 text-center">Добро пожаловать!</h1>
+                <h1 class="mb-4 text-center"><i>Добро пожаловать!</i></h1>
+                <!-- Добавляем картинку -->
+                <p class="text-center mb-0">
+                    <img src="{% static 'media/welcome.jpg' %}" alt="Добро пожаловать"
+                         style="width: 100px; height: auto;"/>
+                </p>
                 <nav aria-label="breadcrumb" class="my-4">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item active" aria-current="page">Форма авторизации</li>
