--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,6 +1,6 @@
 {% extends 'diary/base.html' %}
 {% load static %}
-{% block title %}Авторизация пользователя{% endblock %}
+{% block title %}Выход из аккаунта{% endblock %}
 
 {% block content %}
 <section class="my-registration-form">
@@ -9,13 +9,15 @@
             <div class="col-12">
                 <nav aria-label="breadcrumb" class="my-4">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item active" aria-current="page">Авторизация</li>
+                        <li class="breadcrumb-item active" aria-current="page">Выход</li>
                     </ol>
                 </nav>
 
-                <div class="row justify-content-center">
-                    <div class="col-6">
-                        <p>Вышел из системы!</p>
+                <div class="card border-1 shadow-sm">
+                    <div class="card-body">
+                        <h1 class="text-center mb-4"><i>До свидания, возвращайтесь ещё!</i></h1>
+                    </div>
+                    <div class="mt-4 text-center">
                         <a href="{% url 'users:login'%}">Нажмите здесь, чтобы войти снова</a>
                     </div>
                 </div>
