--- a/diary/templates/block/navbar.html
+++ b/diary/templates/block/navbar.html
@@ -1,3 +1,8 @@
+<style>
+    .my-navigation {
+    border-bottom: 2px solid #ccc; /* Цвет границы можно изменить */
+}
+</style>
 <section class="my-navigation">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -9,16 +14,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 {% if user.is_authenticated %}
                 <div class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <a href="{% url 'diary:list_posts' %}" class="btn btn-primary me-2">Главная</a>
-                    <a href="{% url 'diary:create_post' %}" class="btn btn-primary me-2">Сделать новую запись</a>
+                    <a href="{% url 'diary:list_posts' %}" class="btn btn-outline-primary me-2">Главная</a>
+                    <a href="{% url 'diary:create_post' %}" class="btn btn-outline-primary me-2">Сделать новую запись</a>
                 </div>
 
                 <form action="{% url 'diary:search' %}" method="get" class="d-flex" role="search">
                     <input name="q" class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
                     <button class="btn btn-outline-success me-2" type="submit">Найти</button>
                 </form>
-                <a href="{% url 'users:profile' %}" class="btn btn-primary me-2">Профиль</a>
-                <a href="{% url 'users:logout' %}" class="btn btn-primary me-2">Выход</a>
+                <a href="{% url 'users:profile' %}" class="btn btn-outline-primary me-2">Профиль</a>
+                <a href="{% url 'users:logout' %}" class="btn btn-outline-primary me-2">Выход</a>
                 {% endif %}
             </div>
         </div>
