--- a/users/templates/users/user_form.html
+++ b/users/templates/users/user_form.html
@@ -30,8 +30,12 @@
                     <div class="card-body d-flex flex-column flex-md-row align-items-md-center">
                         <!-- Аватар -->
                         <div class="avatar mb-3 mb-md-0 mr-md-3 text-center text-md-left">
-                            <img src="{{ user.avatar.url }}" alt="Аватар пользователя"
+                            {% if user.avatar %}
+                                <img src="{{ user.avatar.url }}" alt="Аватар пользователя"
                                  style="max-width: 200px; max-height: 250px; object-fit: cover;" id="avatar-image">
+                            {% else %}
+                                <p>Фото отсутствует</p>
+                            {% endif %}
                         </div>
 
                         <!-- Информация о пользователе -->
